cmake_minimum_required(VERSION 3.6)
#project(testing)
#add_definitions(-fprofile-arcs)
#add_definitions(-ftest-coverage)
#add_definitions(-lgcov)
add_definitions(-o)
add_definitions(--coverage)
#add_definitions(-g)
#set(CMAKE_CXX_STANDARD 11)
find_package(GTest REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS})
#set(SOURCE_FILES main.cpp fact.cpp)
add_executable(runTests tests.cpp )
target_link_libraries(runTests ${GTEST_LIBRARIES} pthread)
